--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -10,10 +11,15 @@
 		"@types/node": "^16.18.3",
 		"@types/react": "^18.0.25",
 		"@types/react-dom": "^18.0.9",
+		"@types/redux-logger": "^3.0.9",
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
 		"react-scripts": "5.0.1",
+		"redux-logger": "^3.0.6",
 		"typescript": "^4.9.3",
+		"uuidv4": "^6.2.13",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -50,7 +56,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.31.11",
-		"prettier": "^2.8.0",
-		"husky": "^8.0.0"
+		"husky": "^8.0.0",
+		"prettier": "^2.8.0"
 	}
 }
