--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
 	"author": "Learn with Sumit",
 	"dependencies": {
 		"json-server": "^0.17.0",
+		"json-server-auth": "^2.1.0",
 		"nodemon": "^2.0.19"
 	}
 }
