--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"@types/node": "^16.18.11",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
+		"gravatar-url": "^4.0.1",
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
