--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "lws-json-server-todos",
-	"description": "Example in memory todos api with json-server by Learn with Sumit",
+	"name": "json-server-auth-chatapp",
+	"description": "",
 	"version": "1.0.0",
 	"main": "server.js",
 	"type": "module",
@@ -8,7 +8,7 @@
 		"start": "nodemon server.js"
 	},
 	"keywords": [],
-	"author": "Learn with Sumit",
+	"author": "",
 	"dependencies": {
 		"json-server": "^0.17.0",
 		"json-server-auth": "^2.1.0",
