--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-infinite-scroll-component": "^6.1.0",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.6.1",
 		"react-scripts": "5.0.1",
+		"socket.io-client": "^4.5.4",
 		"typescript": "^4.9.4",
 		"web-vitals": "^2.1.4"
 	},
@@ -55,6 +57,7 @@
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.31.11",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"husky": "^8.0.0",
 		"prettier": "^2.8.1",
 		"tailwindcss": "^3.2.4"
