--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
 	"keywords": [],
 	"author": "",
 	"dependencies": {
+		"express": "^4.18.2",
 		"json-server": "^0.17.0",
 		"json-server-auth": "^2.1.0",
-		"nodemon": "^2.0.19"
+		"nodemon": "^2.0.19",
+		"socket.io": "^4.5.4"
 	}
 }
